--- a/vc8_0/TorrentWizard.vcproj
+++ b/vc8_0/TorrentWizard.vcproj
@@ -243,6 +243,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="version.lib"
 				OutputFile="$(OutDir)$(ProjectName).exe"
+				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
@@ -326,6 +327,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="version.lib"
 				OutputFile="$(OutDir)$(ProjectName).exe"
+				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
