--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4279,7 +4279,7 @@ BEGIN
     ID_HELP_WEB_3           "Visit this website"
     ID_HELP_WEB_4           "Visit this website"
     ID_HELP_WEB_5           "Visit this website"
-    ID_HELP_WEB_6           "Visit this website"
+    ID_HELP_WEB_6           "Visit the skin site"
     ID_HELP_FAQ             "View the Shareaza FAQ."
     ID_HELP_GUIDE           "Visit the Shareaza Users Guide."
     ID_SEARCH_CHAT          "Open a chat session with the selected user."
@@ -4640,7 +4640,8 @@ BEGIN
     ID_HELP_SECURITY        "Help protecting your system from hostile programs."
     ID_HELP_CODEC           "All about codecs and video problems."
     ID_HELP_TEST            "Run the connection test."
-    ID_HELP_DONATE          "If you want, you can donate to our legal fund and show your appreciation."
+    ID_HELP_DONATE          "You can donate to our legal fund and show your appreciation."
+	ID_HELP_FAKESHAREAZA    "Visit FakeShareaza.com to learn more."
 END
 
 STRINGTABLE 
